--- a/src/components/IngredientCard/IngredientCard.module.scss
+++ b/src/components/IngredientCard/IngredientCard.module.scss
@@ -1,18 +1,11 @@
 .card_container {
-  // background-color: black;
   margin: 5px;
   border-radius: 2px;
   display: flex;
   justify-content: space-between;
-  padding-left: 10px;
   align-items: center;
   font-family: 'Raleway', sans-serif;
-  // width: 60%;
 }
-
-// .card_container > span {
-//   background-color: white;
-// }
 
 .ingr_name_text_container {
   background-color: black;
