--- a/src/globalStyles.scss
+++ b/src/globalStyles.scss
@@ -1,4 +1,4 @@
 body {
   margin-top: 50px;
-  background-color: black;
+  background-color: white;
 }
